tests/src/frontend/typechecking/invalid/whenparam_inherit2.sk
base class Foo<T> {
  fun foo[T: String](): void;
}

class Bar<T>() extends Foo<T> {
  fun foo[T: Int](): void {
    void
  }
}
